[package]
name = "fm"
description = "Non-backtracking fuzzy text matcher"
repository = "https://github.com/softdevteam/fm/"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools"]
edition = "2018"

[dependencies]
regex = "1.3"
